@@ -1,3 +1,7 @@
+2003-05-12  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/27_io/basic_filebuf/underflow/10096.cc: Add weak bits.
+
 2003-05-11  Phil Edwards  <pme@gcc.gnu.org>
 
 	* testsuite/Makefile.am:  Properly quote /both/ LD_RUN_PATHs.
